--- a/styles/variables.scss
+++ b/styles/variables.scss
@@ -3,7 +3,16 @@
 $bg: #8ab0d3;
 $border: #14375a;
 
+//text
+
+$rem: 16px;
+
 //header
 
 $header-bg: #e4e2df;
 $header-text: #dd4c1e;
+
+$bg1: #d48bd2;
+$bg2: #3648d0;
+$bg3: #3d3834;
+$bg4: #f06311;
