--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,8 @@
+.cover-text h1 {
+  margin: 0;
+  font-size: 1.75em;
+}
+
 body {
   background: #8ab0d3;
   margin: 0;
@@ -23,12 +28,54 @@ body {
   width: 100%;
   display: flex;
   flex-flow: wrap;
+  justify-content: space-around;
 }
 
-.cover {
-  width: calc(50% - 4px);
-  height: 400px;
-  border: 1px solid #14375a;
+.cover-tile {
+  width: 50%;
+  height: 25rem;
+  box-shadow: 0 8px 6px -6px #414141;
+  transition: 0.2s cubic-bezier(0.215, 0.61, 0.355, 1);
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+}
+.cover-tile:hover {
+  box-shadow: 0 11px 10px -6px #565656;
+}
+
+.cover-art {
+  width: 12.5rem;
+  height: 12.5rem;
+  background: #d48bd2;
+}
+
+.cover-text {
+  max-width: 12rem;
+  height: 4em;
+  border: 1px solid red;
+}
+
+.c1 {
+  background-color: #d48bd2;
+}
+
+.c2 {
+  background-color: #3648d0;
+}
+
+.c3 {
+  background-color: #3d3834;
+}
+
+.c4 {
+  background-color: #f06311;
+}
+
+@media only screen and (max-width: 600px) {
+  .cover-tile {
+    width: 100%;
+  }
 }
 
 /*# sourceMappingURL=style.css.map */
