--- a/styles/variables.scss
+++ b/styles/variables.scss
@@ -11,8 +11,9 @@ $rem: 16px;
 
 $header-bg: #e4e2df;
 $header-text: #dd4c1e;
+$cover-tile-text: #9a9692;
 
-$bg1: #d48bd2;
+$bg1: #dedede;
 $bg2: #3648d0;
-$bg3: #3d3834;
-$bg4: #f06311;
+$bg3: #bdc6c9;
+$bg4: #acbda8;
