--- a/styles/style.scss
+++ b/styles/style.scss
@@ -13,7 +13,7 @@ body {
   top: 0;
   left: 0;
   width: 100%;
-  height: 60px;
+  height: 3em;
   background-color: $header-bg;
   color: $header-text;
   display: flex;
@@ -22,7 +22,7 @@ body {
 }
 
 .main-container {
-  margin-top: calc(60px + 2rem);
+  margin-top: calc(60px + 1rem);
   width: 100%;
   display: flex;
   flex-flow: wrap;
@@ -47,28 +47,58 @@ body {
   width: 12.5rem;
   height: 12.5rem;
   background: $bg1;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 .cover-text {
-  max-width: 12rem;
-  height: 4em;
-  border: 1px solid red;
+  width: 12rem;
+  margin: 0;
+  height: auto;
+
+  text-align: center;
+}
+
+.c1 > .cover-art {
+  background-image: url("../assets/a0548655506_16.jpg");
+}
+
+.c2 > .cover-art {
+  background-image: url("../assets/2.-Mount-Kimbie-Cold-Spring-Fault-Less-Youth.jpg");
+}
+.c3 > .cover-art {
+  background-image: url("../assets/5127-marsvolta.jpg");
+}
+.c4 > .cover-art {
+  background-image: url("../assets/8a6acde7478842e534371a989b8bc395.jpg");
 }
 
 .c1 {
   background-color: $bg1;
+  & .cover-art {
+    background-color: $bg4;
+  }
 }
 .c2 {
+  & .cover-art {
+    background-color: $bg3;
+  }
   background-color: $bg2;
 }
 .c3 {
+  & .cover-art {
+    background-color: $bg2;
+  }
   background-color: $bg3;
 }
 .c4 {
+  & .cover-art {
+    background-color: $bg1;
+  }
   background-color: $bg4;
 }
 
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 1000px) {
   .cover-tile {
     width: 100%;
   }
