--- a/styles/style.scss
+++ b/styles/style.scss
@@ -39,7 +39,7 @@ body {
   justify-content: space-evenly;
   align-items: center;
   &:hover {
-    box-shadow: 0 11px 10px -6px rgb(86, 86, 86);
+    opacity: 0.8;
   }
 }
 
