--- a/styles/style.css
+++ b/styles/style.css
@@ -2,7 +2,7 @@ h1 {
   font-size: 1rem;
   color: #9a9692;
   margin: 0;
-  line-height: 1.5rem;
+  line-height: 1.75rem;
 }
 
 h2 {
@@ -49,7 +49,7 @@ body {
   align-items: center;
 }
 .cover-tile:hover {
-  box-shadow: 0 11px 10px -6px #565656;
+  opacity: 0.8;
 }
 
 .cover-art {
