--- a/styles/style.css
+++ b/styles/style.css
@@ -40,7 +40,7 @@ body {
   color: #dd4c1e;
   display: flex;
   align-items: center;
-  padding: 1rem;
+  padding: 1rem 5%;
   z-index: 2;
 }
 
@@ -48,14 +48,36 @@ body {
   margin-top: calc(60px + 1rem);
   width: 100%;
   display: flex;
-  flex-flow: wrap;
+  flex-wrap: wrap;
   justify-content: space-around;
 }
 
-.cover-tile {
+.tile-container {
   width: 50%;
   height: 25rem;
-  transition: 0.3s cubic-bezier(0.215, 0.61, 0.355, 1);
+}
+.tile-container:nth-child(even) .tile-full-size {
+  position: relative;
+  float: right;
+}
+.tile-container:nth-child(even) .cover-tile {
+  position: relative;
+  float: right;
+}
+.tile-container:nth-child(odd) .tile-full-size {
+  float: left;
+  position: relative;
+}
+.tile-container:nth-child(odd) .cover-tile {
+  position: relative;
+  float: left;
+}
+
+.cover-tile {
+  top: auto;
+  width: 50vw;
+  height: 25rem;
+  transition: 0.9s cubic-bezier(0.215, 0.61, 0.355, 1);
   display: flex;
   justify-content: space-evenly;
   align-items: center;
@@ -70,11 +92,14 @@ body {
   display: flex;
   justify-content: space-evenly;
   align-items: center;
-  transition: 0.3s cubic-bezier(0.215, 0.61, 0.355, 1);
+  transition: 0.9s cubic-bezier(0.215, 0.61, 0.355, 1);
 }
 .tile-full-size > .cover-art {
   width: 70vh;
   height: 70vh;
+}
+.tile-full-size:hover {
+  opacity: 1;
 }
 
 .cover-art {
@@ -82,6 +107,7 @@ body {
   height: 12.5rem;
   background-repeat: no-repeat;
   background-size: cover;
+  transition: 0.9s;
 }
 .cover-art:hover {
   cursor: pointer;
@@ -97,9 +123,9 @@ body {
 .cover-close {
   font-family: "League Spartan";
   font-size: 1em;
-  position: fixed;
-  right: 2rem;
-  top: 6rem;
+  position: absolute;
+  right: 3rem;
+  top: 3rem;
   width: 2em;
   height: 2em;
 }
